# QVIEW-BACKEND

./: .gitignore  generate_pptx.py  main.py  mock_db.json  pyproject.toml  requirements.txt
app/api/: endpoints.py
app/models/: schemas.py
app/services/: groq_service.py  resume_parser.py  storage_service.py
